# pointcloud-map-gui

./: .gitignore  LICENSE  README.md  app.py  colorize.py  ground_grid.py  main.py  map_preview.py  map_writer.py  occupancy_grid.py  pointcloud_io.py  pyproject.toml
.github/workflows/: ci.yml  test.yml
sample_data/: generate_sample.py  sample_room.pcd  sample_room.ply
tests/: test_colorize.py  test_ground_grid.py  test_map_preview.py  test_occupancy_grid.py
